fix: scrollbar issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -339,6 +339,10 @@ hr {
   padding: 20px;
 }
 
+.experience_content::-webkit-content {
+  display: none;
+}
+
 .title_box {
   display: flex;
   align-items: center;
